[package]
name = "tree-sitter-tlaplus"
description = "A tree-sitter grammar for TLA⁺ and PlusCal"
version = "0.0.0"
authors = ["Andrew Helwer", "Vasiliy Morkovkin"]
license = "MIT"
readme = "README.md"
keywords = ["tla+", "tlaplus", "pluscal", "tree-sitter", "parser"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tlaplus-community/tree-sitter-tlaplus"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tree-sitter = { version = "0.22.5", optional = true }
tree-sitter-c2rust = { version = "0.22.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["wasm"]
wasm = ["dep:tree-sitter-c2rust", "dep:wasm-bindgen"]
native = ["dep:tree-sitter"]

[build-dependencies]
cc = "1.0.87"

